--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,8 +24,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: docker-gh
-          environment_name: Dockergh-env
+          application_name: docker_react
+          environment_name: docker_react-env
           existing_bucket_name: docker-react-nayan
           region: ap-south-1
           version_label: ${{ github.sha }}
