--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,8 +25,8 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: docker_react
-          environment_name: docker_react-env
-          existing_bucket_name: docker-react-nayan
+          environment_name: Dockerreact-env
+          existing_bucket_name: elasticbeanstalk-ap-south-1-666116392323
           region: ap-south-1
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
